# shmit

./: .clang-tidy  .gitignore  README.md  meson.build
abyss/: README.md  trie.cpp
scripts/: argv_to_c.sh  argvtoc  codepoint  euclid  gmintbl  marktable  screenshot  screenshot.sh
shlag/: rundeck.h  shitest.h  shlag_b64.h  shlag_btt.c  shlag_btt.h  shlag_pcg.h
shlag/examples/: pcg_simple.c  rundeck_b32.c  shitest_example.c
shlag/tests/: b64test.c  btt_test.c
