project('shmit', 'c')
shlagdir = include_directories('shlag/')

btt_test = executable('btt_test', 'shlag/tests/btt_test.c', include_directories : shlagdir)
pcg_example = executable('pcg_example', 'shlag/examples/pcg_simple.c', include_directories : shlagdir)
shitest_example = executable('shitest_example', 'shlag/examples/shitest_example.c', include_directories : shlagdir)
